iOS Scrollbar fix

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -31,6 +31,11 @@ $Montserrat: 'Montserrat', sans-serif;
 $JockeyOne: 'Jockey One', sans-serif;
 body {
     text-align: center;
+    // overflow: scroll;
+    // scrollbar-width: none;
+    &::-webkit-scrollbar {
+        display: none;
+    }
 }
 h1, h2 {
     font-family: $Open-Sans;
@@ -346,6 +351,14 @@ h3, h4, h5, h6, p {
         }
     }
 }
+@media screen and (max-width: 600px) {
+    #contact {
+        .container-fluid {
+            padding: 0;
+        }
+    }
+}
+
 
 // ipad and smaller
 @media (max-width: 1028px) {
